# rethinking-siakad

./: .eslintignore  .eslintrc.json  Cargo.toml  README.md  nx.json  package.json  pnpm-lock.yaml  tailwind-workspace-preset.js  tsconfig.base.json  tsconfig.json
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/rethinking-siakad-monorepo/: .eslintrc.json  jest.config.ts  project.json  tsconfig.json
apps/rethinking-siakad-monorepo-e2e/: playwright.config.ts  project.json
apps/rethinking-siakad-monorepo/app/: layout.tsx  page.tsx
apps/web/: .eslintrc.json  next.config.js  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.spec.json
apps/web-e2e/: playwright.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(dashboard)/: data.ts  layout.tsx
apps/web/src/app/(main)/list-account/: page.tsx
apps/web/src/app/(main)/login/: page.tsx
apps/web/src/app/(main)/welcome/: page.tsx
apps/web/src/app/data/biodata/: page.tsx
apps/web/src/lib/: navigation.tsx
apps/web/src/styles/: globals.css
apps/web/src/ui/layout/: footer.tsx  header.tsx  sidebar.tsx
libs/database/: Cargo.toml  project.json
libs/ui/: .eslintrc.json  tailwind.config.js  tsconfig.json
libs/ui/src/: index.ts  tailwind-preset.ts
libs/ui/src/components/: index.ts  theme-toggle.tsx
libs/ui/src/components/ui/: alert-dialog.tsx  alert.tsx  card.tsx  checkbox.tsx  dropdown-menu.tsx  form.tsx  input.tsx  scroll-area.tsx  select.tsx  separator.tsx  table.tsx  tabs.tsx  textarea.tsx  typography.tsx
libs/ui/src/lib/: utils.ts
(+7 files in other folders)
