[package]
name = "api"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.79"
axum = {version = "0.7.4", features = ["tracing"]}
axum-extra = "0.9.2"
dotenvy = "0.15.7"
hyper = "1.1.0"
rustls = "0.22.2"
serde = "1.0.196"
serde_json = { version = "1.0.112", features = ["preserve_order"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "postgres"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "net"] }
tower = { version = "0.4.13", features = ["buffer", "limit", "util"] }
tower-http = { version = "0.5.1", features = ["trace", "timeout", "cors", "compression-gzip"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
